@@ -147,13 +147,12 @@ and no epsilon
    chaque instance necessaires. plutot qu'un seul symbole _match
    polymorphe.
 
-==================== Roadmap for release 0.87 ========================
+==================== Roadmap for release 0.88 ========================
 
-DATE : ?
+DATE : au plus tard en novembre 2016, pour que ce soit dispo pour les
+etudiants MPRI (pour la feature strategies en particulier)
 
-Release Notes (details in file CHANGES):
-
-== TODO ==
+* integrate server feature done by Johannes
 
 * Document src/core/trans.mli, and fill the paragraph on
   transformations in the tutorial: doc/api.tex, section 4.7 "Applying
@@ -164,22 +163,7 @@ Release Notes (details in file CHANGES):
   solution possible: symbol builtin t_neq, inlining systematique au typage
   (ou laisser inline_trivial le faire)
 
-* DONE finalize detect_polymorphism. Allow polymorphic tuples (supported by SMT ?)
-
-  C'est finalisé. Mais les tuples restent polymorphes.
-
-* integrate server feature done by Johannes
-
-* DONE Coq realization of bitvector theory
-
 * make counter-examples feature more robust
-
-* DONE support for both isabelle 2014 and 2015
-  + bugfix for installation
-
-* DONE review support for division operators by SMT provers
-
-* take some time to fix some bugs of the BTS: 18029 at least
 
 * use the file generated by altgr-ergo to replay proofs edited by altgr-ergo
 
@@ -187,7 +171,7 @@ Release Notes (details in file CHANGES):
 
   -> on pourrait le faire en considerant altgr-ergo comme un prouveur interactif
 
-* make the strategy feature public and documented. Possibly generate
+* DONE make the strategy feature public and documented. Possibly generate
   default strategies dynamically at the time of why3 config --detect,
   using the provers detected : for that, we can annotated the provers in
   prover-detection-data.conf to tell if they should be used in the strategies,
@@ -201,6 +185,27 @@ Release Notes (details in file CHANGES):
 
   . or, favor timelimit increase...
 
+* take some time to fix some bugs of the BTS: 18029 at least
+
+
+==================== Roadmap for release 0.87 ========================
+
+DATE : mars 2016
+
+Release Notes (details in file CHANGES):
+
+== TODO ==
+
+* DONE finalize detect_polymorphism. Allow polymorphic tuples (supported by SMT ?)
+
+  C'est finalisé. Mais les tuples restent polymorphes.
+
+* DONE Coq realization of bitvector theory
+
+* DONE support for both isabelle 2014 and 2015
+  + bugfix for installation
+
+* DONE review support for division operators by SMT provers
 
 
 
