@@ -186,6 +186,7 @@ version_old = "1.5"
 version_old = "1.4"
 command = "%e -s -R -xAuto -tAuto --cpu-limit=%t --tstp-in %f"
 driver = "drivers/eprover.drv"
+use_at_auto_level = 2
 
 [ATP gappa]
 name = "Gappa"
@@ -266,6 +267,7 @@ version_regexp = "SPASS V \\([^ \n\t]+\\)"
 version_ok = "3.7"
 command = "%e -TPTP -PGiven=0 -PProblem=0 -TimeLimit=%t %f"
 driver = "drivers/spass.drv"
+use_at_auto_level = 2
 
 [ATP spass]
 name = "Spass"
@@ -276,6 +278,7 @@ version_regexp = "SPASS[^ \n\t]* V \\([^ \n\t]+\\)"
 version_ok = "3.8ds"
 command = "%e -Isabelle=1 -PGiven=0 -TimeLimit=%t %f"
 driver = "drivers/spass_types.drv"
+use_at_auto_level = 2
 
 [ATP vampire]
 name = "Vampire"
