@@ -1,6 +1,13 @@
 
 * marks an incompatible change
 
+
+Tools
+
+  o why3 config now generates default proof strategies using the
+    installed provers. These are available under name "Auto level 1"
+    and "Auto level 2" in why3 ide.
+
 Version 0.87.0, March 15, 2016
 ================================
 
